@@ -18,6 +18,7 @@ Version 1.4.7 - CVS
   - Undo extra sanitizing in decodeHeader() function (#1460638).
   - Added workaround for broken OpenBSD 3.8+ setlocale() function (#1427512).
   - Fixed session lockups on large attachment downloads.
+  - Fixed bug_report plugin connections to mapped and secured IMAP servers.
 
 Version 1.4.6 - 23 February 2006
 --------------------------------
